_rendered/apps/adguard-home/service-adguard-home-dns.yaml
# Source: adguard-home/charts/adguard-home/templates/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: adguard-home-dns
  labels:
    helm.sh/chart: adguard-home-4.6.0
    
    custom.network/homeassistant-integrated: ingress
    custom.network/heimdall-integrated: ingress
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
    app.kubernetes.io/version: "v0.107.78"
    app.kubernetes.io/managed-by: Helm
    custom.network/lb-pool: static
  annotations:
    lbipam.cilium.io/ips: 10.0.4.2,fda0:f54f:5876::4:2
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 8053
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 8053
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
